--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -113,7 +113,7 @@
         {{else}}
             {{{body}}}
         {{/if}}
-        <div class="footer-utils">
+        <div>
             <button id="scroll-to-top"><i class="fa-solid fa-arrow-up"></i></button>
             <button id="show-shortcuts">⌘</button>
         </div>
@@ -123,7 +123,7 @@
                     Keyboard Shortcuts
                     <span id="close-shortcuts">&times;</span>
                 </div>
-                <hr style="width: 100%" />
+                <hr />
                 <div id="shortcuts-list">
                     <kbd>Option</kbd>
                     +
