--- a/src/views/pages/fun/eight-ball.hbs
+++ b/src/views/pages/fun/eight-ball.hbs
@@ -1,12 +1,10 @@
-<div class="tooltext">
-    Your Question:
-    <input id="question-input" />
-    <button id="roll">Roll ball!</button>
-    <hr style="margin: 10px 0" />
-    <div id="result">
-        You asked:
-        <div id="question-display">Enter question above!</div>
-        The ball says:
-        <div id="answer-output">Nothing... yet!</div>
-    </div>
-</div>
+<h2>Your Question:</h2>
+<input id="question-input" />
+<button id="roll">Roll ball!</button>
+<hr />
+<section>
+    <h2>You asked:</h2>
+    <div id="question-display">Enter question above!</div>
+    <h2>The ball says:</h2>
+    <div id="answer-output">Nothing... yet!</div>
+</section>
