--- a/src/views/pages/fun/mp3-player.hbs
+++ b/src/views/pages/fun/mp3-player.hbs
@@ -4,25 +4,25 @@
     <div>
         <div class="mp3-grid-left">
             <div class="player">
-                <div class="information" style="padding-top: 20px">
+                <div class="information">
                     <div id="timer">0:00</div>
-                    <div id="title" style="margin-left: 10px; width: 210px; text-align: center">Loading...</div>
-                    <div id="duration" style="margin-left: 10px">0:00</div>
+                    <div id="title">Loading...</div>
+                    <div id="duration">0:00</div>
                 </div>
                 <div class="progress">
                     <div id="progress-bar"></div>
                 </div>
                 <div class="buttons">
-                    <span style="margin-right: 20px"><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i id="shuffle-status" class="fa-solid fa-xmark"></i></span></span>
+                    <span><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i id="shuffle-status" class="fa-solid fa-xmark"></i></span></span>
                     <span><i class="player-icon fa-solid fa-step-backward" id="previous"></i></span>
                     <span><i class="player-icon fa-solid fa-backward" id="rewind"></i></span>
                     <span><i class="player-icon fa-solid fa-play" id="play-pause"></i></span>
                     <span><i class="player-icon fa-solid fa-forward" id="forward"></i></span>
                     <span><i class="player-icon fa-solid fa-step-forward" id="next"></i></span>
-                    <span style="margin-left: 20px"><i class="player-icon fa-solid fa-volume-up" id="toggle-mute"></i></span>
+                    <span><i class="player-icon fa-solid fa-volume-up" id="toggle-mute"></i></span>
                 </div>
             </div>
-            <div class="playlists" style="font-size: 18px; padding: 15px; margin-top: 15px">
+            <div class="playlists">
                 Playlists:
                 <ul id="playlists-list"></ul>
             </div>
