--- a/src/views/pages/fun/random-fact.hbs
+++ b/src/views/pages/fun/random-fact.hbs
@@ -1,4 +1,2 @@
-<div class="tooltext">
-    <div id="fact-output">Loading...</div>
-    <button id="get-fact" style="padding: 0.5rem; margin-top: 15px">New Fact</button>
-</div>
+<div id="fact-output">Loading...</div>
+<button id="get-fact">New Fact</button>
