--- a/src/views/pages/fun/random-joke.hbs
+++ b/src/views/pages/fun/random-joke.hbs
@@ -1,4 +1,2 @@
-<div class="tooltext">
-    <div id="joke-output">Loading...</div>
-    <button id="get-joke" style="padding: 0.5rem; margin-top: 15px">New Joke</button>
-</div>
+<div id="joke-output">Loading...</div>
+<button id="get-joke">New Joke</button>
