--- a/src/views/pages/info/minecraft-codes.hbs
+++ b/src/views/pages/info/minecraft-codes.hbs
@@ -1,6 +1,7 @@
-<p class="info">For more information about formatting codes, see <a href="https://minecraft.fandom.com/wiki/Formatting_codes" target="_blank" class="external-link">here</a>.</p>
-<div class="warning scroll-message">Scroll →</div>
-<table class="info-table">
+For more information about formatting codes, see
+<a href="https://minecraft.fandom.com/wiki/Formatting_codes" target="_blank" class="external-link">here</a>.
+<div class="scroll-message">Scroll</div>
+<table class="info-table needs-scroll">
     <thead>
         <tr>
             <th>Color & Minecraft Name</th>
