--- a/src/views/pages/info/state-abbreviations.hbs
+++ b/src/views/pages/info/state-abbreviations.hbs
@@ -1,5 +1,5 @@
-<div class="warning scroll-message">Scroll →</div>
-<table class="info-table">
+<div class="scroll-message">Scroll</div>
+<table class="info-table needs-scroll">
     <thead>
         <tr>
             <th>State</th>
