--- a/src/views/pages/tools/base64-converter.hbs
+++ b/src/views/pages/tools/base64-converter.hbs
@@ -1,12 +1,13 @@
-<div class="tooltext">
-    Input:<br />
-    <textarea id="input" style="width: 50%"></textarea>
-    <br /><button id="encode">Encode <i id="encode-result"></i></button><button id="decode">Decode <i id="decode-result"></i></button>
-    <button id="clear">Clear</button>
-</div>
-<hr style="margin-top: 30px" />
-<div class="tooltext">
-    Output:<br />
-    <textarea id="result" style="width: 50%" readonly></textarea>
-    <br /><button id="copy-result" disabled>Copy</button>
-</div>
+<section>
+    <h2>Input:</h2>
+    <textarea id="input"></textarea>
+    <button id="encode">Encode</button>
+    <button id="decode">Decode</button>
+    <button id="clear" class="button-danger">Clear</button>
+</section>
+<hr />
+<section>
+    <h2>Output:</h2>
+    <textarea id="result" readonly></textarea>
+    <button id="copy-result" class="button-copy" disabled>Copy</button>
+</section>
