--- a/src/views/pages/tools/calendar.hbs
+++ b/src/views/pages/tools/calendar.hbs
@@ -16,7 +16,7 @@
             <tbody id="calendar-body"></tbody>
         </table>
 
-        <div style="margin-top: 10px"><span class="holiday">Blue text</span> = Holiday</div>
+        <div><span class="holiday">Blue text</span> = Holiday</div>
 
         <div id="buttons">
             <button id="previous-month">Previous Month</button>
@@ -24,8 +24,8 @@
             <button id="current-date">Current Date</button>
         </div>
 
-        <br />Jump to:
-        <select id="jump-month" style="width: fit-content">
+        Jump to:
+        <select id="jump-month">
             <option value="0">January</option>
             <option value="1">February</option>
             <option value="2">March</option>
@@ -40,7 +40,7 @@
             <option value="11">December</option>
         </select>
 
-        <select id="jump-year" style="width: fit-content"></select>
+        <select id="jump-year"></select>
     </div>
     <div id="date-display">
         <div id="display-day"></div>
@@ -55,7 +55,6 @@
             <div id="todo-list">
                 <input type="text" id="login-password" />
                 <button id="login-button">Login</button>
-                <span id="login-result" style="padding-left: 5px"></span>
             </div>
         </div>
     </div>
