--- a/src/views/pages/tools/counter.hbs
+++ b/src/views/pages/tools/counter.hbs
@@ -1,5 +1,5 @@
-<div class="tooltext" style="text-align: center; margin: 0; font-weight: 600; font-size: 90px; line-height: 100%"><span class="odometer" id="counter">0</span><br /></div>
-<div class="tooltext" style="text-align: center; margin: 0; font-weight: 600; line-height: 100%">
+<div style="text-align: center; margin: 0; font-weight: 600; font-size: 90px; line-height: 100%"><span class="odometer" id="counter">0</span><br /></div>
+<div style="text-align: center; margin: 0; font-weight: 600; line-height: 100%">
     Activation Button:
     <select style="margin-top: 20px" id="activation-button">
         <option value="1">Spacebar</option>
