--- a/src/views/pages/tools/keycode-info.hbs
+++ b/src/views/pages/tools/keycode-info.hbs
@@ -1,36 +1,34 @@
-<div class="tooltext">
-    <div id="ready"><span style="color: #009c3f"><i class="fa-solid fa-check"></i> Ready to get key information!</span></div>
-    <br />Click any key to get information, click any cell to copy the information.
-    <table class="keycodes">
-        <thead>
-            <tr style="color: #595959">
-                <th style="width: 16.6%">Key</th>
-                <th style="width: 16.6%">Repeating</th>
-                <th style="width: 16.6%">Key Location</th>
-                <th style="width: 16.6%">Key Code</th>
-                <th style="width: 16.6%">Char Code (ASCII)</th>
-                <th style="width: 16.6%">Char Code (Unicode)</th>
-            </tr>
-        </thead>
-        <tr id="key-results">
-            <td style="width: 16.6%" id="key-cell">
-                <span id="key">&nbsp;</span>
-            </td>
-            <td style="width: 16.6%" id="key-repeating-cell">
-                <span id="key-repeating">&nbsp;</span>
-            </td>
-            <td style="width: 16.6%" id="key-location-cell">
-                <span id="key-location">&nbsp;</span>
-            </td>
-            <td style="width: 16.6%" id="key-code-cell">
-                <span id="key-code">&nbsp;</span>
-            </td>
-            <td style="width: 16.6%" id="key-ascii-cell">
-                <span id="key-ascii">&nbsp;</span>
-            </td>
-            <td style="width: 16.6%" id="key-unicode-cell">
-                <span id="key-unicode">&nbsp;</span>
-            </td>
+<div id="ready"><span style="color: var(--success-color-300)"><i class="fa-solid fa-check"></i> Ready to get key information!</span></div>
+<br />Click any key to get information, click any cell to copy the information.
+<table class="keycodes">
+    <thead>
+        <tr>
+            <th>Key</th>
+            <th>Repeating</th>
+            <th>Key Location</th>
+            <th>Key Code</th>
+            <th>Char Code (ASCII)</th>
+            <th>Char Code (Unicode)</th>
         </tr>
-    </table>
-</div>
+    </thead>
+    <tr id="key-results">
+        <td id="key-cell">
+            <span id="key">&nbsp;</span>
+        </td>
+        <td id="key-repeating-cell">
+            <span id="key-repeating">&nbsp;</span>
+        </td>
+        <td id="key-location-cell">
+            <span id="key-location">&nbsp;</span>
+        </td>
+        <td id="key-code-cell">
+            <span id="key-code">&nbsp;</span>
+        </td>
+        <td id="key-ascii-cell">
+            <span id="key-ascii">&nbsp;</span>
+        </td>
+        <td id="key-unicode-cell">
+            <span id="key-unicode">&nbsp;</span>
+        </td>
+    </tr>
+</table>
