--- a/src/views/pages/tools/quick-copy.hbs
+++ b/src/views/pages/tools/quick-copy.hbs
@@ -1,5 +1,5 @@
 <div class="basic-grid" style="--min-width: 450px">
-    <div class="tooltext" style="font-weight: 500; color: dimgray; font-size: 16px">
+    <div>
         <button id="clear-clipboard" style="padding: 0.5rem">Clear Clipboard</button><br /><br />
         Zero Width Space (&ZeroWidthSpace;):
         <button id="copy-zws">Copy</button><br />
@@ -12,7 +12,7 @@
         Thin Space (&thinsp;):
         <button id="copy-ts">Copy</button><br />
     </div>
-    <div class="tooltext" style="line-height: 100%">
+    <div>
         Current Clipboard:<br /><br />
         <div class="error" style="font-size: 14px" id="clipboard-warning"><i class="fa-solid fa-exclamation-triangle"></i> Permission to read clipboard denied!</div>
         <textarea id="copied-text" style="width: 60%" readonly></textarea><br />
