--- a/src/views/pages/tools/random-number.hbs
+++ b/src/views/pages/tools/random-number.hbs
@@ -1,12 +1,10 @@
-<div class="tooltext">
-    <span style="font-weight: 500; color: dimgray; font-size: 16px">Min (Inclusive):
-        <input type="number" id="min-number" value="1" style="width: 4rem" />
-        <br />Max (Inclusive)
-        <input type="number" id="max-number" value="10" style="width: 4rem" /></span>
-    <br /><button id="generate-number">Generate <i id="generate-result"></i></button>
-    <button id="reset">Reset</button>
-</div>
-<hr style="margin-top: 30px" />
-<div class="tooltext" style="text-align: center; margin: 0; font-weight: 800; font-size: 90px">
+Min (Inclusive):
+<input type="number" id="min-number" value="1" style="width: 4rem" />
+<br />Max (Inclusive)
+<input type="number" id="max-number" value="10" style="width: 4rem" />
+<br /><button id="generate-number">Generate <i id="generate-result"></i></button>
+<button id="reset">Reset</button>
+<hr />
+<div style="text-align: center; margin: 0; font-weight: 800; font-size: 90px">
     <span class="odometer" id="random-number">0</span>
 </div>
