--- a/src/views/pages/tools/svg-to-png.hbs
+++ b/src/views/pages/tools/svg-to-png.hbs
@@ -1,20 +1,20 @@
 <div class="basic-grid" style="--min-width: 450px">
     <div>
-        <span class="tooltext">SVG:</span>
+        SVG:
         <br />
         <textarea id="svg-input" style="width: 450px; max-width: 70%; height: 200px; max-height: 350px; resize: both"></textarea><br />
         <button id="load-svg" style="margin-left: 0">Load SVG</button>
         <button id="clear">Clear</button>
     </div>
     <div>
-        <span class="tooltext">Loaded SVG (auto-shrunk to fit):</span>
+        Loaded SVG (auto-shrunk to fit):
         <br />
         <div id="svg-preview"></div>
     </div>
 </div>
 <div class="basic-grid" style="--min-width: 450px">
     <div style="line-height: 200%">
-        <span class="tooltext">Save Options:</span>
+        Save Options:
         <br />
         Width:
         <input id="width-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
@@ -23,7 +23,7 @@
         <button id="save-png" style="margin-left: 0">Save PNG</button>
     </div>
     <div>
-        <span class="tooltext">Converted PNG (auto-shrunk to fit):</span>
+        Converted PNG (auto-shrunk to fit):
         <br />
         <canvas id="png-canvas"></canvas>
     </div>
