--- a/src/views/pages/tools/temperature-converter.hbs
+++ b/src/views/pages/tools/temperature-converter.hbs
@@ -1,23 +1,19 @@
-<div class="tooltext">
-    Input:<br />
-    <select style="margin-top: 20px" id="input-type">
-        <option value="1" selected>Fahrenheit</option>
-        <option value="2">Celsius</option>
-        <option value="3">Kelvin</option>
-    </select>
-    <br /><input id="input" pattern="[0-9]*" />
-    <br /><button id="reset">Reset</button>
-    <button id="switch">Switch input and output</button>
-</div>
-<hr style="margin-top: 30px" />
-<div class="tooltext">
-    <span class="tooltip-bottom" data-tooltip="Rounded to the nearest thousandth">Output</span>:
-    <div id="message" class="error" style="font-size: 15px"></div>
-    <select style="margin-top: 20px" id="output-type">
-        <option value="1">Fahrenheit</option>
-        <option value="2" selected>Celsius</option>
-        <option value="3">Kelvin</option>
-    </select>
-    <br /><input id="output" readonly />
-    <br /><button id="copy-output" disabled>Copy</button>
-</div>
+Input:<br />
+<select style="margin-top: 20px" id="input-type">
+    <option value="1" selected>Fahrenheit</option>
+    <option value="2">Celsius</option>
+    <option value="3">Kelvin</option>
+</select>
+<br /><input id="input" />
+<br /><button id="reset">Reset</button>
+<button id="switch">Switch input and output</button>
+<hr />
+<span class="tooltip-bottom" data-tooltip="Rounded to the nearest thousandth">Output</span>:
+<div id="message" class="error" style="font-size: 15px"></div>
+<select style="margin-top: 20px" id="output-type">
+    <option value="1">Fahrenheit</option>
+    <option value="2" selected>Celsius</option>
+    <option value="3">Kelvin</option>
+</select>
+<br /><input id="output" readonly />
+<br /><button id="copy-output" disabled>Copy</button>
