--- a/src/public/styles/footer.css
+++ b/src/public/styles/footer.css
@@ -1,22 +1,3 @@
-.footer-utils {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    border: none;
-    border-radius: 5px 0 0;
-    background: #31353d;
-    width: 64px;
-    height: 32px;
-    color: whitesmoke;
-    font-size: 18px;
-    text-align: center;
-
-    @media (width <= 600px) {
-        width: 32px;
-    }
-}
-
 #show-shortcuts {
     position: fixed;
     right: 0;
@@ -24,7 +5,7 @@
     margin: 0;
     border: none;
     border-radius: 0;
-    background: #31353d;
+    background-color: #31353d;
     width: 32px;
     height: 32px;
     color: whitesmoke;
@@ -43,7 +24,7 @@
     margin: 0;
     border: none;
     border-radius: 5px 0 0;
-    background: #31353d;
+    background-color: #31353d;
     width: 32px;
     height: 32px;
     color: whitesmoke;
@@ -57,7 +38,7 @@
 
 #show-shortcuts:hover,
 #scroll-to-top:hover {
-    background: #2b2e35;
+    background-color: #2b2e35;
     color: dimgray;
 }
 
@@ -70,14 +51,14 @@
     background-color: rgb(0 0 0 / 40%);
     padding-top: 200px;
     width: 100%;
-    height: 100%;
+    height: 200%;
     overflow: auto;
 
     &.animate-out-top {
         animation-duration: 0.3s;
         animation-direction: reverse;
         animation-name: animate-top;
-        background: none;
+        background-color: none;
     }
 }
 
@@ -95,6 +76,10 @@
     padding: 0;
     width: 30%;
     min-width: 300px;
+
+    & hr {
+        margin: 5px 0 0;
+    }
 }
 
 @keyframes animate-top {
