--- a/src/public/styles/pages/fun/astronomy-picture.css
+++ b/src/public/styles/pages/fun/astronomy-picture.css
@@ -1,3 +1,8 @@
+/* APOD output */
+#result {
+    margin-bottom: 1em;
+}
+
 a#apod-link {
     display: block;
     margin: 20px auto;
@@ -23,4 +28,21 @@ div#apod-embed-container {
         width: 100%;
         height: 100%;
     }
+}
+
+/* Date fetcher */
+#month-input,
+#date-input {
+    margin-right: 1em;
+    width: 2.5em;
+}
+
+#year-input {
+    margin-right: 1em;
+    width: 4em;
+}
+
+#reset-date {
+    display: block;
+    margin-top: 1em;
 }
