--- a/src/views/pages/info/tone-indicators.hbs
+++ b/src/views/pages/info/tone-indicators.hbs
@@ -1,4 +1,4 @@
-<p class="info">Tone indicators can be used to express tones or emotions in online messages, and are usually appended to a message.</p>
+Tone indicators can be used to express tones or emotions in online messages, and are usually appended to a message.
 <table class="info-table" style="overflow-x: hidden; margin-top: 30px">
     <thead>
         <tr>
