--- a/src/views/pages/tools/color-info.hbs
+++ b/src/views/pages/tools/color-info.hbs
@@ -1,59 +1,77 @@
-<button id="generate-random" style="padding: 8px; font-size: 15px">Generate random color</button>
+<button id="generate-random">Generate random color</button>
+
 <div class="color-grid">
     <div>
-        <span class="tooltext">Current Color:</span><br />
+        <h2>Current Color:</h2>
         <div id="color-display"></div>
     </div>
     <div>
-        <span class="tooltext">Color Picker:</span><br />
-        <input type="color" id="color-picker" style="margin-block: 10px" />
+        <h2>Color Picker:</h2>
+        <input type="color" id="color-picker" />
     </div>
-    <div>
-        <span class="tooltext">Alter Values:</span><br />
-        <button id="darken">Darken</button><br />
-        <button id="brighten">Brighten</button><br />
-        <button id="saturate">Saturate</button><br />
-        <button id="desaturate">Desaturate</button><br />
-        <button id="increase-luminance">Increase Luminance</button><br />
-        <button id="decrease-luminance">Decrease Luminance</button><br />
-    </div>
-</div>
-<div class="color-grid" style="margin-top: 25px; line-height: 180%; grid-template-columns: repeat(auto-fill, minmax(500px, 1fr))">
-    <div>
-        <span class="tooltext" style="line-height: 50%; margin-bottom: -5px; display: block">Manual Input & Results:</span><br />
-        Name:
-        <input id="name" style="width: 8rem" />
-        <button id="copy-name">Copy</button><br />
-        Hex (Hexadecimal):
-        <input id="hex" style="width: 6rem" />
-        <button id="copy-hex">Copy</button><br />
-        Decimal:
-        <input id="decimal" style="width: 6rem" class="no-arrow" type="number" min="0" max="16777215" />
-        <button id="copy-decimal">Copy</button><br />
-        RGB (Red, Green, Blue):
-        <input id="rgb" style="width: 10rem" />
-        <button id="copy-rgb">Copy</button><br />
-        HSL (Hue, Saturation, Lightness):
-        <input id="hsl" style="width: 15rem" />
-        <button id="copy-hsl">Copy</button><br />
-        Alpha Value:
-        <input id="alpha" style="width: 3rem" class="no-arrow" type="number" min="0" max="1" />
-        <button id="copy-alpha">Copy</button>
-    </div>
-    <div>
-        <span class="tooltext" style="line-height: 50%; margin-bottom: -5px; display: block">Color Information:</span><br />
-        Luminance (relative, see
-        <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank" class="external-link">WCAG definition</a>):
-        <input id="luminance" style="width: 4rem" disabled />
-        <button id="copy-luminance">Copy</button><br />
-        Temperature (Kelvin, estimated, from
-        <a href="https://www.zombieprototypes.com/?p=210" target="_blank" class="external-link">color temperature scale</a>):
-        <input id="temperature" style="width: 4rem" disabled />
-        <button id="copy-temperature">Copy</button><br />
+    <div id="alter-values">
+        <h2>Alter Values:</h2>
+        <button id="darken">Darken</button>
+        <button id="brighten">Brighten</button>
+        <button id="saturate">Saturate</button>
+        <button id="desaturate">Desaturate</button>
+        <button id="increase-luminance">Increase Luminance</button>
+        <button id="decrease-luminance">Decrease Luminance</button>
     </div>
 </div>
 
-<div class="tooltext" style="margin-top: 20px">Color History (click to switch):</div>
+<div class="color-grid" style="--min-width: 500px">
+    <div id="manual-inputs">
+        <h2>Manual Input & Results:</h2>
+        <div>
+            Name:
+            <input id="name" style="width: calc(20ch + 12px)" />
+            <button id="copy-name" class="button-copy">Copy</button>
+        </div>
+        <div>
+            Hex (Hexadecimal):
+            <input id="hex" style="width: calc(9ch + 12px)" />
+            <button id="copy-hex" class="button-copy">Copy</button>
+        </div>
+        <div>
+            Decimal:
+            <input id="decimal" style="width: calc(10ch + 12px)" class="no-arrow" type="number" min="0" max="16777215" />
+            <button id="copy-decimal" class="button-copy">Copy</button>
+        </div>
+        <div>
+            RGB (Red, Green, Blue):
+            <input id="rgb" style="width: calc(21ch + 12px)" />
+            <button id="copy-rgb" class="button-copy">Copy</button>
+        </div>
+        <div>
+            HSL (Hue, Saturation, Lightness):
+            <input id="hsl" style="width: calc(30ch + 12px)" />
+            <button id="copy-hsl" class="button-copy">Copy</button>
+        </div>
+        <div>
+            Alpha Value:
+            <input id="alpha" style="width: calc(4ch + 12px)" class="no-arrow" type="number" min="0" max="1" />
+            <button id="copy-alpha" class="button-copy">Copy</button>
+        </div>
+    </div>
+    <div id="color-info">
+        <h2>Color Information:</h2>
+        <div>
+            Luminance (relative, see
+            <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank" class="external-link">WCAG definition</a>):
+            <input id="luminance" style="width: calc(5ch + 12px)" disabled />
+            <button id="copy-luminance" class="button-copy">Copy</button>
+        </div>
+        <div>
+            Temperature (Kelvin, estimated, from
+            <a href="https://www.zombieprototypes.com/?p=210" target="_blank" class="external-link">color temperature scale</a>):
+            <input id="temperature" style="width: calc(5ch + 12px)" disabled />
+            <button id="copy-temperature" class="button-copy">Copy</button>
+        </div>
+    </div>
+</div>
+
+<h2>Color History (click to switch):</h2>
 <ul id="color-history"></ul>
 <div id="full-color">
     <div id="full-color-message">Press <kbd>Escape</kbd> or click anywhere to exit this menu!</div>
