--- a/src/views/pages/tools/image-converter.hbs
+++ b/src/views/pages/tools/image-converter.hbs
@@ -1,36 +1,34 @@
-<div class="tooltext">
-    <div class="basic-grid" style="--min-width: 450px">
-        <div class="tooltext">
-            Image:<br />
-            <label id="file-upload-label" for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-            <input id="file-upload" type="file" accept="image/*" />
-            <div style="font-size: 14px; color: dimgray; min-height: 1em" id="file-message"></div>
-            <button id="load" disabled>Load</button>
-            <button id="clear">Clear</button>
-        </div>
-        <div class="tooltext">
-            Image Preview:<br />
-            <canvas id="image-preview" style="max-width: 80%" width="0" height="0"></canvas>
-        </div>
+<div class="basic-grid" style="--min-width: 450px">
+    <div>
+        Image:<br />
+        <label id="file-upload-label" for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
+        <input id="file-upload" type="file" accept="image/*" />
+        <div id="file-message"></div>
+        <button id="load" disabled>Load</button>
+        <button id="clear">Clear</button>
     </div>
-    <hr style="margin-top: 30px" />
-    <div class="basic-grid" style="--min-width: 450px">
-        <div class="tooltext">
-            Output Type:<br />
-            <select id="output-type" disabled>
-                <option value="png" selected>PNG (Portable Network Graphics)</option>
-                <option value="jpeg">JPEG (Joint Photographic Experts Group)</option>
-                <option value="webp">WebP (WebP Image)</option>
-            </select>
-            <br />
-            <button id="convert" disabled>Convert</button>
-        </div>
-        <div class="tooltext">
-            Converted Image:<br />
-            <img id="image-output" style="max-width: 80%" src="" />
-            <br />
-            <a id="open-converted-link" target="_blank"><button id="open-converted-result" disabled>Open in new tab</button></a>
-            <a id="download-converted-link" target="_blank" download><button id="download-converted-result" disabled>Download</button></a>
-        </div>
+    <div>
+        Image Preview:<br />
+        <canvas id="image-preview" style="max-width: 80%" width="0" height="0"></canvas>
+    </div>
+</div>
+<hr />
+<div class="basic-grid" style="--min-width: 450px">
+    <div>
+        Output Type:<br />
+        <select id="output-type" disabled>
+            <option value="png" selected>PNG (Portable Network Graphics)</option>
+            <option value="jpeg">JPEG (Joint Photographic Experts Group)</option>
+            <option value="webp">WebP (WebP Image)</option>
+        </select>
+        <br />
+        <button id="convert" disabled>Convert</button>
+    </div>
+    <div>
+        Converted Image:<br />
+        <img id="image-output" style="max-width: 80%" src="" />
+        <br />
+        <a id="open-converted-link" target="_blank"><button id="open-converted-result" disabled>Open in new tab</button></a>
+        <a id="download-converted-link" target="_blank" download><button id="download-converted-result" disabled>Download</button></a>
     </div>
 </div>
