--- a/src/views/pages/tools/length-converter.hbs
+++ b/src/views/pages/tools/length-converter.hbs
@@ -1,39 +1,35 @@
-<div class="tooltext">
-    Input:<br />
-    <select style="margin-top: 20px" id="input-type">
-        <option value="1">Kilometer</option>
-        <option value="2">Meter</option>
-        <option value="3">Centimeter</option>
-        <option value="4">Millimeter</option>
-        <option value="5">Micrometer</option>
-        <option value="6">Nanometer</option>
-        <option value="7">Mile</option>
-        <option value="8">Yard</option>
-        <option value="9" selected>Foot</option>
-        <option value="10">Inch</option>
-        <option value="11">Nautical mile</option>
-    </select>
-    <br /><input id="input" pattern="[0-9]*" />
-    <br /><button id="reset">Reset</button>
-    <button id="switch">Switch input and output</button>
-</div>
-<hr style="margin-top: 30px" />
-<div class="tooltext">
-    <span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:
-    <div id="message" class="error" style="font-size: 15px"></div>
-    <select style="margin-top: 20px" id="output-type">
-        <option value="1">Kilometer</option>
-        <option value="2">Meter</option>
-        <option value="3">Centimeter</option>
-        <option value="4">Millimeter</option>
-        <option value="5">Micrometer</option>
-        <option value="6">Nanometer</option>
-        <option value="7" selected>Mile</option>
-        <option value="8">Yard</option>
-        <option value="9">Foot</option>
-        <option value="10">Inch</option>
-        <option value="11">Nautical mile</option>
-    </select>
-    <br /><input id="output" readonly />
-    <br /><button id="copy-output" disabled>Copy</button>
-</div>
+Input:<br />
+<select style="margin-top: 20px" id="input-type">
+    <option value="1">Kilometer</option>
+    <option value="2">Meter</option>
+    <option value="3">Centimeter</option>
+    <option value="4">Millimeter</option>
+    <option value="5">Micrometer</option>
+    <option value="6">Nanometer</option>
+    <option value="7">Mile</option>
+    <option value="8">Yard</option>
+    <option value="9" selected>Foot</option>
+    <option value="10">Inch</option>
+    <option value="11">Nautical mile</option>
+</select>
+<br /><input id="input" />
+<br /><button id="reset">Reset</button>
+<button id="switch">Switch input and output</button>
+<hr />
+<span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:
+<div id="message" class="error" style="font-size: 15px"></div>
+<select style="margin-top: 20px" id="output-type">
+    <option value="1">Kilometer</option>
+    <option value="2">Meter</option>
+    <option value="3">Centimeter</option>
+    <option value="4">Millimeter</option>
+    <option value="5">Micrometer</option>
+    <option value="6">Nanometer</option>
+    <option value="7" selected>Mile</option>
+    <option value="8">Yard</option>
+    <option value="9">Foot</option>
+    <option value="10">Inch</option>
+    <option value="11">Nautical mile</option>
+</select>
+<br /><input id="output" readonly />
+<br /><button id="copy-output" disabled>Copy</button>
