--- a/src/views/pages/tools/list-sorter.hbs
+++ b/src/views/pages/tools/list-sorter.hbs
@@ -1,19 +1,13 @@
-<div class="tooltext">
-    Input:<br />
-    <textarea id="input" style="width: 50%"></textarea>
-    <br /><span style="font-weight: 500; color: dimgray; font-size: 16px"><span class="tooltip-bottom" data-tooltip="What separates items in the list (\n = newline)">Separator</span>: </span><input
-        id="separator"
-        value="\n"
-        style="width: 4rem"
-    />
-    <br /><button id="alphabetize-normal">Alphabetize (A-Z) <i id="alphabetize-result"></i></button><button id="numerize">Numerize (filters non numbers) <i id="numerize-result"></i></button><button
-        id="randomize"
-    >Randomize <i id="randomize-result"></i></button><button id="reverse">Reverse current order <i id="reverse-result"></i></button>
-    <button id="clear">Clear</button>
-</div>
-<hr style="margin-top: 30px" />
-<div class="tooltext">
-    Output:<br />
-    <textarea id="result" style="width: 50%" readonly></textarea>
-    <br /><button id="copy-result" disabled>Copy</button>
-</div>
+
+Input:<br />
+<textarea id="input" style="width: 50%"></textarea>
+<br /><span class="tooltip-bottom" data-tooltip="What separates items in the list (\n = newline)">Separator</span>:
+<input id="separator" value="\n" style="width: 4rem" />
+<br /><button id="alphabetize-normal">Alphabetize (A-Z) <i id="alphabetize-result"></i></button><button id="numerize">Numerize (filters non numbers) <i id="numerize-result"></i></button><button
+    id="randomize"
+>Randomize <i id="randomize-result"></i></button><button id="reverse">Reverse current order <i id="reverse-result"></i></button>
+<button id="clear">Clear</button>
+<hr />
+Output:<br />
+<textarea id="result" style="width: 50%" readonly></textarea>
+<br /><button id="copy-result" disabled>Copy</button>
