--- a/src/views/pages/tools/radical-simplifier.hbs
+++ b/src/views/pages/tools/radical-simplifier.hbs
@@ -1,22 +1,18 @@
-<div class="tooltext">
-    Input (<span class="code" style="color: dimgray">\(operand \cdot \sqrt[index]{radicand}\)</span>):<br />
-    Index:
-    <input id="index" style="width: 100px" placeholder="2" />
-    <br />
-    Radicand:
-    <input id="radicand" style="width: 100px" />
-    <br />
-    Operand:
-    <input id="operand" style="width: 100px" placeholder="1" />
-    <br />
-    <button id="simplify">Simplify</button>
-    <button id="reset">Reset</button>
-</div>
+Input (<span class="code">\(operand \cdot \sqrt[index]{radicand}\)</span>):<br />
+Index:
+<input id="index" style="width: 100px" placeholder="2" />
+<br />
+Radicand:
+<input id="radicand" style="width: 100px" />
+<br />
+Operand:
+<input id="operand" style="width: 100px" placeholder="1" />
+<br />
+<button id="simplify">Simplify</button>
+<button id="reset">Reset</button>
 <br />
 <hr />
 <br />
-<div class="tooltext">
-    Result:<br />
-    <span id="output" class="code hidden" style="color: dimgray"></span>
-    <span id="message" style="color: dimgray; font-size: 16px">Nothing yet!</span>
-</div>
+Result:<br />
+<span id="output" class="code hidden"></span>
+<span id="message">Nothing yet!</span>
