--- a/src/views/pages/tools/time-converter.hbs
+++ b/src/views/pages/tools/time-converter.hbs
@@ -1,43 +1,39 @@
-<div class="tooltext">
-    Input:<br />
-    <select style="margin-top: 20px" id="input-type">
-        <option value="1">Nanoseconds</option>
-        <option value="2">Microseconds</option>
-        <option value="3">Milliseconds</option>
-        <option value="4">Seconds</option>
-        <option value="5">Minutes</option>
-        <option value="6">Hours</option>
-        <option value="7" selected>Days</option>
-        <option value="8">Weeks</option>
-        <option value="9">Months</option>
-        <option value="10">Years</option>
-        <option value="11">Decades</option>
-        <option value="12">Centuries</option>
-        <option value="13">Millennia</option>
-    </select>
-    <br /><input id="input" pattern="[0-9]*" />
-    <br /><button id="reset">Reset</button>
-    <button id="switch">Switch input and output</button>
-</div>
-<hr style="margin-top: 30px" />
-<div class="tooltext">
-    <span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:
-    <div id="message" class="error" style="font-size: 15px"></div>
-    <select style="margin-top: 20px" id="output-type">
-        <option value="1">Nanoseconds</option>
-        <option value="2">Microseconds</option>
-        <option value="3">Milliseconds</option>
-        <option value="4">Seconds</option>
-        <option value="5" selected>Minutes</option>
-        <option value="6">Hours</option>
-        <option value="7">Days</option>
-        <option value="8">Weeks</option>
-        <option value="9">Months</option>
-        <option value="10">Years</option>
-        <option value="11">Decades</option>
-        <option value="12">Centuries</option>
-        <option value="13">Millennia</option>
-    </select>
-    <br /><input id="output" readonly />
-    <br /><button id="copy-output" disabled>Copy</button>
-</div>
+Input:<br />
+<select style="margin-top: 20px" id="input-type">
+    <option value="1">Nanoseconds</option>
+    <option value="2">Microseconds</option>
+    <option value="3">Milliseconds</option>
+    <option value="4">Seconds</option>
+    <option value="5">Minutes</option>
+    <option value="6">Hours</option>
+    <option value="7" selected>Days</option>
+    <option value="8">Weeks</option>
+    <option value="9">Months</option>
+    <option value="10">Years</option>
+    <option value="11">Decades</option>
+    <option value="12">Centuries</option>
+    <option value="13">Millennia</option>
+</select>
+<br /><input id="input" />
+<br /><button id="reset">Reset</button>
+<button id="switch">Switch input and output</button>
+<hr />
+<span class="tooltip-bottom" data-tooltip="Rounded to the nearest trillionth">Output</span>:
+<div id="message" class="error" style="font-size: 15px"></div>
+<select style="margin-top: 20px" id="output-type">
+    <option value="1">Nanoseconds</option>
+    <option value="2">Microseconds</option>
+    <option value="3">Milliseconds</option>
+    <option value="4">Seconds</option>
+    <option value="5" selected>Minutes</option>
+    <option value="6">Hours</option>
+    <option value="7">Days</option>
+    <option value="8">Weeks</option>
+    <option value="9">Months</option>
+    <option value="10">Years</option>
+    <option value="11">Decades</option>
+    <option value="12">Centuries</option>
+    <option value="13">Millennia</option>
+</select>
+<br /><input id="output" readonly />
+<br /><button id="copy-output" disabled>Copy</button>
