--- a/src/views/pages/tools/timer.hbs
+++ b/src/views/pages/tools/timer.hbs
@@ -1,15 +1,11 @@
-<div class="tooltext">
-    <span style="font-weight: 500; color: dimgray; font-size: 50px">
-        <input type="text" pattern="[0-9]*" id="hours" max="23" maxlength="2" value="0" class="invisible-input" />h
-        <input type="text" pattern="[0-9]*" id="minutes" max="59" maxlength="2" value="1" class="invisible-input" />m
-        <input type="text" pattern="[0-9]*" id="seconds" max="59" maxlength="2" value="0" class="invisible-input" />s
-    </span>
-    <br /><button id="start-timer">Start <i id="timer-result"></i></button>
-    <button id="pause-resume-timer" disabled>Pause</button>
-    <button id="reset">Reset</button>
-</div>
-<hr style="margin-top: 30px" />
-<div class="tooltext" style="text-align: center; margin: 0; font-weight: 600; font-size: 90px; margin-top: 50px; line-height: 100%; padding-bottom: 25px">
+<input type="text" id="hours" max="23" maxlength="2" value="0" class="invisible-input" />h
+<input type="text" id="minutes" max="59" maxlength="2" value="1" class="invisible-input" />m
+<input type="text" id="seconds" max="59" maxlength="2" value="0" class="invisible-input" />s
+<br /><button id="start-timer">Start <i id="timer-result"></i></button>
+<button id="pause-resume-timer" disabled>Pause</button>
+<button id="reset">Reset</button>
+<hr />
+<div style="text-align: center; margin: 0; font-weight: 600; font-size: 90px; margin-top: 50px; line-height: 100%; padding-bottom: 25px">
     <span id="timer">0h 0m 0s</span><br />
     <span id="timer-time" style="font-size: 30px"></span>
 </div>
